# server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Doxyfile  LICENSE.md  Makefile  README.md  apashqyara  client  cmake_install.cmake  file.enc  make_all.sh  po_sekretu  private.key  public.key  runalltests  server  server.cpp
Client Docs/: annotated.html  classClient_1_1ClientModel-members.html  classClient_1_1ClientModel.html  classNet_1_1BasicCommunicationModel-members.html  classNet_1_1BasicCommunicationModel.html  classNet_1_1BasicConnectionHandler-members.html  classNet_1_1BasicConnectionHandler.html  classes.html  classiounit_1_1IOModel-members.html  classiounit_1_1IOModel.html  client_8h.html  client_8h__incl.map  client_8h__incl.md5  client_8h_source.html  communication__unit_8h.html  communication__unit_8h__dep__incl.map  communication__unit_8h__dep__incl.md5  communication__unit_8h__incl.map  communication__unit_8h__incl.md5  communication__unit_8h_source.html  connection__handler_8h.html  connection__handler_8h__dep__incl.map  connection__handler_8h__dep__incl.md5  connection__handler_8h__incl.map  connection__handler_8h__incl.md5  connection__handler_8h_source.html  dir_000003_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6908ff505388a07996d238c763adbdab.html  dir_6908ff505388a07996d238c763adbdab_dep.map  dir_6908ff505388a07996d238c763adbdab_dep.md5  dir_78ce3fde11f1c50580f2f2c408f37c2f.html  dir_78ce3fde11f1c50580f2f2c408f37c2f_dep.map  dir_78ce3fde11f1c50580f2f2c408f37c2f_dep.md5  dir_c7a20b80ce65e841dd30fc88a8acdace.html  files.html  functions.html  functions_func.html  (+8 more)
Server Docs/: annotated.html  classServer_1_1Handler.html  classServer_1_1ServerModel-members.html  classstrless-members.html  classstrless.html  dir_000003_000002.html  dir_075bb3ff235063c77951cd176d15a741_dep.map  dir_075bb3ff235063c77951cd176d15a741_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_aec46070e25e2e5fb0789c4048a4272f_dep.map  files.html  functions.html  functions_vars.html  graph_legend.html  handler_8h.html  handler_8h__dep__incl.map  handler_8h__dep__incl.md5  handler_8h__incl.map  server_8h.html  structdelete__ptr-members.html  structdelete__ptr.html
client/: CMakeLists.txt
client/lib/include/helpers/: constants.h
client/lib/include/helpers/debug_helper/: debug_helper.h
client/lib/include/util/data_transfer/message_model/: message_templates.h
client/lib/src/helpers/debug/: debug_helper.cpp
client/lib/src/util/data_transfer/message_model/: message_model.cpp  message_templates.cpp
client/lib/src/util/data_transfer/message_resolver/: CMakeLists.txt  message_resolver.cpp
client/src/client/: CMakeLists.txt
client/src/client/include/: chatroom_model.h  client.h  communication_unit.h  connection_handler.h  handler.h  io_unit.h
client/src/client/include/client_interface/: client_interface.h
client/src/client/src/: itc.hpp  main.cpp
client/src/client/src/client_interface/: CMakeLists.txt  client_interface.cpp
client/src/client/src/client_src/: CMakeLists.txt  chatroom_model.cpp  client.cpp  communication_unit.cpp  connection_handler.cpp  handler.cpp  io_unit.cpp
html/: classServer_1_1Handler-members.html  classServer_1_1ServerModel.html  classes.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_4c4c22e08115d73e2127164eea876a2a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_aec46070e25e2e5fb0789c4048a4272f.html  dir_aec46070e25e2e5fb0789c4048a4272f_dep.md5  functions_func.html  (+4 more)
lib/src/helpers/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libdebug_helper.so.1  libdebug_helper.so.1.0.1  liblibdebug_helper.so.1  liblibdebug_helper.so.1.0.1
lib/src/helpers/debug/: debug_helper.cpp
lib/src/helpers/debug_helper/: debug_helper.cpp
lib/src/util/cryptolib/: CMakeLists.txt  Makefile  cmake_install.cmake  crypto_unit.cpp  libcrypto_unit.so.1.0.1
lib/src/util/data_transfer/message_model/: CMakeLists.txt  Makefile  cmake_install.cmake  libmessage_model.so.1  libmessage_model.so.1.0.1  message_model.cpp  message_templates.cpp
lib/src/util/data_transfer/message_resolver/: CMakeLists.txt  Makefile  cmake_install.cmake  libmessage_resolver.so.1  libmessage_resolver.so.1.0.1  message_resolver.cpp
server/lib/src/helpers/: CMakeLists.txt
server/lib/src/helpers/debug/: debug_helper.cpp
server/lib/src/util/data_transfer/message_model/: CMakeLists.txt  message_model.cpp  message_templates.cpp
server/lib/src/util/data_transfer/message_resolver/: CMakeLists.txt  message_resolver.cpp
server/tests/: CMakeLists.txt  serv_model_test.cpp
src/client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/client/include/: client.h  communication_unit.h  connection_handler.h  events.h  handler.h  io_unit.h
src/client/include/client_interface/: client_interface.h
src/client/src/: client.cpp  communication_unit.cpp  connection_handler.cpp  handler.cpp  io_unit.cpp  itc.hpp  main.cpp
src/client/src/client_interface/: client_interface.cpp
src/client/src/client_src/: CMakeLists.txt  client.cpp  cmake_install.cmake  communication_unit.cpp  connection_handler.cpp
src/server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/server/include/: handler.h  server.h
src/server/include/chat_model/: chatroom_manager.h  chatroom_model.h
src/server/include/customer_model/: customer.h  customer_crypto_unit.h
src/server/src/: handler.cpp  main.cpp  server.cpp
src/server/src/chat_model/: chatroom_manager.cpp  chatroom_model.cpp
src/server/src/customer_model/: customer.cpp  customer_crypto_unit.cpp
tests/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/client_tests/: CMakeLists.txt  Makefile  cmake_install.cmake  t_client  test_1.cpp
tests/lib_tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test2.cpp  test3.cpp  test4.cpp  test_1.cpp
tests/server_tests/: CMakeLists.txt  Makefile  cmake_install.cmake
(+133 files in other folders)
